# anyfeeder_connector

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  package.xml  setup.cfg  src_dependencies.rosinstall
include/anyfeeder_connector/: anyfeeder.hpp  connection.hpp  ethernet_connection.hpp  mock_connection.hpp  serial_connection.hpp
launch/: anyfeeder_connector.launch.py
src/: anyfeeder.cpp  anyfeeder_node.cpp  ethernet_connection.cpp  mock_connection.cpp  serial_connection.cpp
test/: test_actions.cpp  test_anyfeeder.cpp
